@@ -16,6 +16,10 @@ Revision history for Dist-Mgr
     - all make* functions have verbose option to print all output (closes #35)
     - In git_release(), we now call git_status() to see whether we should
       perform other git actions
+    - Update MANIFEST.SKIP after installing Github Actions CI config file
+      (fixes #34)
+    - distmgr now does a 'git add' and make_manifest() after installing Github
+      Actions CI file (fixes #33)
 
 1.00    2020-12-30
     - Fix issue where ABSTRACT was being pulled from one of the test
